--- a/style.css
+++ b/style.css
@@ -27,9 +27,11 @@ body {
     top:150px;
     width:800px;
     background-color: aliceblue;
+    padding-left: 2%;
     padding-top: 2%;
     padding-right: 4%;
     padding-bottom: 3%;
+    border-radius: 2%;
 }
 
 .text {
@@ -37,54 +39,71 @@ body {
 }
 
 .side2 {
+    background-color: aliceblue;
     position:fixed ; 
-    left:1100px; 
+    left:1200px; 
     top:150px;  
     width:700px;
 
 }
 
-h1 {
-    margin-left: 70px;
-    }
-    form li {
-    list-style: none;
-    margin-bottom: 5px;
-    }
-    
-    form ul li label{
-    float: left;
-    clear: left;
-    width: 150px;
-    text-align: right;
-    margin-right: 10px;
-    font-family:Verdana, Arial, Helvetica, sans-serif;
-    font-size:14px;
-    }
-    
-    form ul li input, span {
-    float: left;
-    margin-bottom: 15px;
-    }
+.button{
+    position: fixed;
+    left: 1350px;
+    background-color: rgb(24, 163, 117);
+    padding: 10px 30px;
+    border: 0px;
+    border-radius: 8%;
+    font-weight: 700;
+}
 
-    form ul li select{
-        float: left;
-        margin-bottom: 20px;
-        }
+.reset{
+    position: fixed;
+    left: 1470px;
+    background-color: rgb(24, 163, 117);
+    padding: 10px 30px;
+    border: 0px;
+    border-radius: 8%;
+    font-weight: 700;
+}
+
+
+input[type="text"] {  
+    width: 250px;  
+    border: 3%;
+}  
+input[type="submit"] {  
+    width: 100px;  
+    height: 50px;  
+    position: relative;
+}  
+
+form{  
+    background-color: aliceblue;
+    position:fixed ; 
+    left:1100px;
+    text-align: left;  
+    font-family: Calibri;  
+    font-size: 20px;  
+    border: 0px solid black;  
+    width: 750px;  
+    height: 705px;
+    padding-bottom: 20px;
+    padding-left: 2%;
+    border-radius: 2%;
+}  
+h1 {
+    margin-left: 80px;
+}
+td {  
+    padding: 15px;  
+}  
+td:first-child {  
+    left: 50px;
+    text-align: right;  
+    font-weight: bolder;  
+}  
+td:last-child {  
+    text-align: left;  
+}
     
-    form textarea {
-    float: left;
-    width: 350px;
-    height: 150px;
-    }
-    
-    [type="submit"] {
-    clear: left;
-    margin: 20px 0 0 160px;
-    font-size:18px
-    }
-    
-    p {
-    margin-left: 70px;
-    font-weight: bold;
-    }
