--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
   border-radius: 15px;
 }
 
-#btn-dog, #btn-down {
+#btn {
   margin: 10px;
   padding: 2px 12px;
   border-radius: 5px;
@@ -74,12 +74,12 @@ body {
   background-color: #114D99;
 }
 
-#btn-dog:hover, #btn-cat:hover {
+#btn:hover{
   background-color: #2e47b8;
   transform: scale(1.2);
 }
 
-#btn-dog:active, #btn-cat:active {
+#btn:active {
   transform: scale(.9);
 }
 
