--- a/api.css
+++ b/api.css
@@ -1,12 +1,18 @@
 body {
-    background-color: rgb(255, 255, 255);
-    font-family: 'Montserrat', sans-serif;
-    display: grid;
-    place-items: center;
-    height: 12vh;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+    background-color: #272727;
+    margin: 0;
+    font-family: 'Cute Font', cursive;
+    font-size: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    color: #fff;
+    letter-spacing: 1px; 
+    text-align: center;
+  }
+  
 
 .container {
     text-align: center;
@@ -31,19 +37,20 @@ td {
 }
 
 table {
-    background-color: azure;
+    background-color: rgb(0, 110, 110);
     width: 500px;
     height: 250px;
 }
 button{
-    width: 100px;
-    height: 50px;
-    font-size: 20px;
-    background: linear-gradient(rgb(100, 100, 100));
-    border: 10px;
-    border-radius: 5%;
-    color: black;
-    position: relative;
+    margin: 10px;
+    padding: 2px 12px;
+    border-radius: 5px;
+    outline: none;  
+    font-family: inherit;
+    font-size: 36px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #4d8ee4;
 
 }
 
